--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "express-minimal-starter",
   "main": "index.js",
   "scripts": {
-    "lint": "node_modules/.bin/standard",
-    "start": "babel src --out-dir=./dist && cross-env NODE_ENV=production node ./dist/app.js",
+    "lint": "./node_modules/.bin/standard",
+    "start": "./node_modules/.bin/babel src --out-dir=./dist && cross-env NODE_ENV=production node ./dist/app.js",
     "dev": "cross-env NODE_ENV=development babel-watch src/app.js | ./node_modules/.bin/bunyan"
   },
   "author": "Zhenchao Chen",
