add async await example, with express-promise-router

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-promise-router": "^2.0.0",
     "helmet": "^3.9.0"
   },
   "devDependencies": {
